# Projet-2-Requetez-des-services-IA

./: .gitignore  README.md  pyproject.toml  test_setup.py
notebook/: SAVE_P2_notebook.ipynb
projet2/: huggingface_api_cloth_seg.ipynb
projet2/SRC/: model.py
