[project]
name = "projet2"
version = "0.1.0"
description = ""
authors = [
    {name = "MendyData",email = "mendy.data@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "iprogress (>=0.4,<0.5)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
